internal/adapters/aws/transform/testdata/nccgroup/iam-user-inline-policy.json
{
    "UserName": "sadcloudInlineUser",
    "PolicyName": "terraform-20260601130346607600000008",
    "PolicyDocument": {
        "Version": "2012-10-17",
        "Statement": [
            {
                "Effect": "Allow",
                "NotAction": "s3:DeleteBucket",
                "Resource": "*"
            }
        ]
    }
}
