internal/adapters/aws/transform/testdata/nccgroup/kms-policy-mrk-971.json
{
    "Policy": "{\n  \"Version\" : \"2012-10-17\",\n  \"Statement\" : [ {\n    \"Sid\" : \"Enable IAM User Permissions\",\n    \"Effect\" : \"Allow\",\n    \"Principal\" : {\n      \"AWS\" : \"arn:aws:iam::442426852386:root\"\n    },\n    \"Action\" : \"kms:*\",\n    \"Resource\" : \"*\"\n  }, {\n    \"Sid\" : \"Allow use of the key by API\",\n    \"Effect\" : \"Allow\",\n    \"Principal\" : {\n      \"AWS\" : \"arn:aws:iam::442426852386:role/plaidaws-ApiFunctionRole-3AgydT8vK0Fu\"\n    },\n    \ [...]
    "PolicyName": "default"
}
