internal/adapters/aws/transform/testdata/nccgroup/iam-user-inline-policy.expected-asset.json
{
  "id": "arn:aws:iam::442426852386:inline-policy/sadcloudInlineUser/terraform-20260601130346607600000008",
  "type": "aws_iam_policy",
  "vendor": "aws",
  "properties": {
    "identity": {
      "kind": "policy",
      "policy": {
        "shadow_logic": {
          "has_not_action": true,
          "not_action_values": [
            "s3:DeleteBucket"
          ],
          "effect": "Allow",
          "resource": "*"
        }
      }
    }
  }
}
