internal/adapters/aws/transform/testdata/nccgroup/iam_password_policy.expected-asset.json
{
  "id": "arn:aws:iam::442426852386:password-policy",
  "type": "aws_iam_password_policy",
  "vendor": "aws",
  "properties": {
    "identity": {
      "kind": "password_policy",
      "password_policy": {
        "minimum_length": 6,
        "require_uppercase": false,
        "require_lowercase": false,
        "require_numbers": false,
        "require_symbols": false,
        "reuse_prevention_count": 0,
        "max_password_age": 0
      }
    }
  }
}
